@@ -1,3 +1,7 @@
+2010-06-06  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
+
 2010-06-05  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14625: htmlArea RTE: Inconsistant position of ok button
